# Medixa-AI

./: .env.example  .gitignore  DECISION_LOG.md  FAILURE_LOG.md  README.md  REQUIREMENTS_FREEZE.md  TASK_TRACKER.md  docker-compose.test.yml  docker-compose.yml  pyproject.toml
api-gateway/: Dockerfile  main.py
data-pipeline/: Dockerfile  consumer.py  producer.py  requirements.txt
docs/: DEVLOG.md  DOCUMENTATION.md  architecture.md  data_collection_report.md  drug_pairs.md  model_card.md
frontend/: Dockerfile  nginx-default.conf  package-lock.json
frontend/src/: App.css  App.tsx  index.css
genai-service/: Dockerfile  main.py  rag.py  requirements.txt
ml-service/: Dockerfile  requirements.txt  serve.py  train.py
observability/: grafana-dashboard.json  prometheus.yml
observability/grafana/dashboards/: data-pipeline-dashboard.json  medixa-ai-services.json  ml-performance-dashboard.json  system-health-dashboard.json
observability/grafana/provisioning/dashboards/: dashboards.yml
observability/grafana/provisioning/datasources/: datasource.yml
tests/: Dockerfile.test  conftest.py  pytest.ini  requirements-test.txt
tests/e2e/: conftest.py  test_analyse_flow.py  test_history.py
tests/integration/: conftest.py  test_gateway_integration.py  test_pipeline_integration.py
tests/unit/: conftest.py  test_gateway.py  test_genai_service.py  test_ml_service.py  test_pipeline.py
