[project]
name = "medixa-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.42.0",
    "prometheus-client>=0.16.0",
    "prometheus-fastapi-instrumentator>=6.0.0",
]
